--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: 'Poppins', sans-serif;
 }
 
 body {
@@ -11,15 +12,10 @@ body {
     height: 100%;
     background-attachment: fixed;
     font-family: 'Poppins', sans-serif;
-    font-size: 24px;
+    font-size: 22px;
     line-height: 1.5;
+    color: white;
 }
-
-/* img {
-    max-width: 100%;
-    width: 250px;
-    height: auto;
-} */
 
 h1, h2 {
     margin-bottom: 15px;
@@ -64,24 +60,27 @@ nav {
 .navbar .logo {
     font-size: 35px;
     font-weight: bold;
+    color:#fff;
 }
 
 .navbar .container {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    /* height: 100%;
-    position: fixed; */
-    top: 0;
+    height: 100%;
+    /* position: fixed; */ */
+    /* top: 0;
     left: 0;
     width: 100%;
     z-index: 9999;
-    box-shadow: 0 2px 2px #e8e8e8;
+    box-shadow: 0 2px 2px #e8e8e8; */
 }
 
 .header {
     color: #fff;
-    min-height: 400px;
+    min-height: 300px;
+    /* background-color: rgb(147, 146, 146); */
+    height: 350px;
 }
 
 .hero-text {
@@ -99,24 +98,90 @@ nav {
     max-width: 400px;
     height:300px;
     width: 300px;
-    margin-top: 0 auto;
+    margin: 20px 0 0 0;
 }
 
 .header button {
     width: 150px;
     height: 40px;
-    border-radius: 10px;
+    margin-top: 20px;
+    /* border-radius: 10px; */
+    border: none;
+    cursor: pointer;
+    background-color: #499b4a;
+}
+
+.header button:hover {
+    transform: scale(1.05);
 }
 
 .header button a {
     text-decoration: none;
-    color: #000;
+    color: #fff;
     font-weight: bold;
-    font-family: 'Poppins', sans-serif;
 }
+
 
 .header .container {
     display: flex;
     align-items: center;
     justify-content: space-between;
 }
+
+.cards .container {
+    display: flex;
+    justify-content: space-between;
+    color: white;
+}
+
+.card {
+    flex: 1;
+    width: 350px;
+    height: 300px;
+    margin: 20px;
+    border-radius: 7px;
+    text-align: center;
+    overflow: hidden;
+    position: relative;
+}
+
+.card img {
+    max-width: 100%;
+    display: block;
+    width: 100%;
+    height: auto;
+    padding: 10px;
+    border-radius: 20px;
+    transition: 0.5s all;
+    transform: scale(1);
+}
+
+.card img:hover {
+    transform: scale(1.01);
+}
+
+/* Quote by Carl Sagan */
+.quote .container {
+    display: flex;
+    flex-direction: column;
+    padding: 0 100px;
+}
+
+.quote .container h2 {
+    text-align: right;
+}
+
+/* Footer */
+footer {
+    text-align: center;
+}
+
+footer p {
+    padding: 10px 0 10px;
+}
+
+footer a {
+    color:#499b4a;
+    text-decoration: none;
+}
+
