--- a/styles.css
+++ b/styles.css
@@ -21,33 +21,32 @@ h1, h2 {
     margin-bottom: 15px;
 }
 
-ul {
-    list-style-type: none;
-}
-
-.container {
+section {
     max-width: 1100px;
     margin: 0 auto;
     padding: 0 30px;
 }
+
+/* section:nth-child(4) {
+    margin-top: 70px;
+} */
 nav {
     position:relative;
 }
 
 .navbar {
     color: #fff;
-    /* background: #eee; */
     height: 65px;
     
 }
 
 .navbar ul {
     display: flex;
+    list-style-type: none;
 }
 
 .navbar ul li {
     margin-left: 20px;
-    
 }
 
 .navbar a {
@@ -55,6 +54,13 @@ nav {
     text-decoration: none;
     font-size: 16px;
     font-weight: bold;
+    transition: all 0.2s ease-in-out;
+
+}
+
+.navbar a:hover, .navbar a:focus{
+    border-bottom: 2mm ridge#499b4a;
+    transform: 2s ease-in;
 }
 
 .navbar .logo {
@@ -68,19 +74,14 @@ nav {
     justify-content: space-between;
     align-items: center;
     height: 100%;
-    /* position: fixed; */ */
-    /* top: 0;
-    left: 0;
-    width: 100%;
-    z-index: 9999;
-    box-shadow: 0 2px 2px #e8e8e8; */
 }
+
+/* Header section */
 
 .header {
     color: #fff;
     min-height: 300px;
-    /* background-color: rgb(147, 146, 146); */
-    height: 350px;
+    margin-bottom: 10px;
 }
 
 .hero-text {
@@ -98,15 +99,15 @@ nav {
     max-width: 400px;
     height:300px;
     width: 300px;
-    margin: 20px 0 0 0;
+    margin: 20px 0;
 }
 
-.header button {
+button {
     width: 150px;
     height: 40px;
-    margin-top: 20px;
-    /* border-radius: 10px; */
+    margin: 10px 0 20px;
     border: none;
+    color: whitesmoke;
     cursor: pointer;
     background-color: #499b4a;
 }
@@ -128,6 +129,11 @@ nav {
     justify-content: space-between;
 }
 
+/* Cards section */
+.cards {
+    height: 40vh;
+    margin-bottom: 50px;
+}
 .cards .container {
     display: flex;
     justify-content: space-between;
@@ -136,9 +142,9 @@ nav {
 
 .card {
     flex: 1;
-    width: 350px;
+    width: 300px;
     height: 300px;
-    margin: 20px;
+    margin: 10px;
     border-radius: 7px;
     text-align: center;
     overflow: hidden;
@@ -150,7 +156,8 @@ nav {
     display: block;
     width: 100%;
     height: auto;
-    padding: 10px;
+    box-shadow: 0 3px 5px rgba(0, 0, 0, 0.7);
+
     border-radius: 20px;
     transition: 0.5s all;
     transform: scale(1);
@@ -164,11 +171,33 @@ nav {
 .quote .container {
     display: flex;
     flex-direction: column;
-    padding: 0 100px;
+    /* padding: 0 10px; */
+    margin: 100px 0 30px;
+    padding: 15px;
 }
 
 .quote .container h2 {
     text-align: right;
+}
+
+/* SUbscribe to newsletter */
+.sign-up .container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.sign-up-text {
+    font-size: 20px;
+}
+
+.sign-up .container .sign-up-btn {
+    width: 150px;
+    height: 40px;
+    margin-top: 20px;
+    border: none;
+    cursor: pointer;
+    background-color: #499b4a;
 }
 
 /* Footer */
